# KalshiTemps

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml.disabled
docs/: current-progress.md  data-sources.md  high-precision-roadmap.md  implementation-design.md  index.md  market-workflow-and-risk-controls.md  operations-runbook.md  runbook.md  schema-reference.md  shortcomings-and-roadmap.md  systemd-examples.md  tailscale-remote-access.md  temperature-forecasting-plan.md
scripts/: backup_sqlite.sh  check_tailscale_access.sh  restore_sqlite.sh  run_collectors_once.sh  run_local.sh  run_tests.sh  seed_demo_data.sh
src/kalshi_temps/: __init__.py  app.py  auth.py  backfill.py  calibration.py  cli.py  db.py  fusion.py  ingest.py  kalshi.py  market_rules.py  model_adapters.py  monitoring.py  nowcast.py  official_sources.py  ops.py  paper_live.py  quality.py  repository.py  scheduler.py  seed.py  settlement.py  weather_features.py
static/: styles.css
templates/: dashboard.html
tests/: test_app_integration.py  test_backfill.py  test_calibration.py  test_fusion.py  test_ingest.py  test_kalshi.py  test_market_rules.py  test_model_adapters.py  test_monitoring.py  test_nowcast.py  test_official_sources.py  test_ops.py  test_paper_live.py  test_quality.py  test_scheduler.py  test_settlement.py  test_weather_features.py
