[project]
name = "kalshi-temps"
version = "0.1.0"
description = "Lightweight SQLite-backed dashboard for Seattle high-temperature evidence."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
kalshi-temps = "kalshi_temps.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_temps"]
